[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=2]
[ext_resource path="res://src/screens/log_in_module/log_in/log_in.gd" type="Script" id=3]
[ext_resource path="res://src/ui/back_button.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 29
font_data = ExtResource( 1 )

[node name="log_in" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.164706, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -167.0
margin_top = 46.7194
margin_right = 167.0
margin_bottom = 134.719
custom_fonts/font = SubResource( 1 )
text = "Logging In"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.794
margin_top = -74.0588
margin_right = -217.794
margin_bottom = -30.0588
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password_label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -378.879
margin_top = 43.4072
margin_right = -219.879
margin_bottom = 87.4072
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.772
margin_top = -72.507
margin_right = 271.228
margin_bottom = -24.507
custom_fonts/font = SubResource( 3 )
placeholder_text = "Enter Email here"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="LineEdit" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.437
margin_top = 40.9545
margin_right = 272.563
margin_bottom = 88.9545
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Enter Password Here"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 92.6526
margin_top = 154.221
margin_right = 221.653
margin_bottom = 238.221
theme = ExtResource( 2 )
text = "Enter"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="forgot_password" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -314.544
margin_top = 154.111
margin_right = 42.456
margin_bottom = 238.111
theme = ExtResource( 2 )
text = "Forgot My Pasword"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="get_document_request" type="HTTPRequest" parent="."]

[node name="back" parent="." instance=ExtResource( 4 )]
scale = Vector2( 0.244, 0.244 )
scene_path = "res://src/screens/start_up_screen.tscn"

[node name="error_pane" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_right = -1.33484
color = Color( 0.121569, 0.0235294, 0.282353, 0.431373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup" type="ColorRect" parent="error_pane"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -126.5
margin_right = 265.0
margin_bottom = 126.5
color = Color( 0.929412, 0.211765, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_msg" type="Label" parent="error_pane/popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -21.5
margin_right = 248.0
margin_bottom = 67.5
custom_fonts/font = SubResource( 4 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="success_pane" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.33484
margin_right = -1.33484
color = Color( 0.0862745, 0.494118, 0.0392157, 0.431373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="popup" type="ColorRect" parent="success_pane"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -126.5
margin_right = 265.0
margin_bottom = 126.5
color = Color( 0.156863, 0.847059, 0.231373, 1 )

[node name="success_msg" type="Label" parent="success_pane/popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -21.5
margin_right = 248.0
margin_bottom = 67.5
custom_fonts/font = SubResource( 4 )
text = "Login Successful"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
[connection signal="button_up" from="forgot_password" to="." method="_on_forgot_password_button_up"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="get_document_request" to="." method="_on_get_document_request_request_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
